--- a/cscharp-learning/csharp-learning.csproj
+++ b/cscharp-learning/csharp-learning.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
-    <RootNamespace>cscharp_learning</RootNamespace>
+    <RootNamespace>csharp_learning</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
