--- a/csharp-learning/csharp-learning.csproj
+++ b/csharp-learning/csharp-learning.csproj
@@ -16,6 +16,7 @@
     <Folder Include="Chapter10_Properties\images\" />
     <Folder Include="Chapter11_Events\images\" />
     <Folder Include="Chapter12_Generalization\images\" />
+    <Folder Include="Chapter13_Interfaces\images\" />
   </ItemGroup>
 
 </Project>
