--- a/csharp-learning/csharp-learning.csproj
+++ b/csharp-learning/csharp-learning.csproj
@@ -25,6 +25,7 @@
     <Folder Include="Part3.BasicDataTypes\Chapter18_CustomizedAttributes\images\" />
     <Folder Include="Part3.BasicDataTypes\Chapter19_NullCompatibleTypes\images\" />
     <Folder Include="Part4.KeyMechanisms\Chapter20_ExceptionsAndStateControl\images\" />
+    <Folder Include="Part4.KeyMechanisms\Chapter21_GarbageCollection\images\" />
   </ItemGroup>
 
 </Project>
