--- a/csharp-learning/csharp-learning.csproj
+++ b/csharp-learning/csharp-learning.csproj
@@ -28,6 +28,7 @@
     <Folder Include="Part4.KeyMechanisms\Chapter21_GarbageCollection\images\" />
     <Folder Include="Part4.KeyMechanisms\Chapter22_CLRHostingAndAppDomains\images\" />
     <Folder Include="Part4.KeyMechanisms\Chapter23_AssemblyLoadingAndReflection\images\" />
+    <Folder Include="Part4.KeyMechanisms\Chapter24_Serialization\images\" />
   </ItemGroup>
 
 </Project>
