--- a/csharp-learning/csharp-learning.csproj
+++ b/csharp-learning/csharp-learning.csproj
@@ -29,6 +29,7 @@
     <Folder Include="Part4.KeyMechanisms\Chapter22_CLRHostingAndAppDomains\images\" />
     <Folder Include="Part4.KeyMechanisms\Chapter23_AssemblyLoadingAndReflection\images\" />
     <Folder Include="Part4.KeyMechanisms\Chapter24_Serialization\images\" />
+    <Folder Include="Part4.KeyMechanisms\Chapter25_InteractionWithWinRTComponents\images\" />
   </ItemGroup>
 
 </Project>
