--- a/csharp-learning/csharp-learning.csproj
+++ b/csharp-learning/csharp-learning.csproj
@@ -31,6 +31,7 @@
     <Folder Include="Part4.KeyMechanisms\Chapter24_Serialization\images\" />
     <Folder Include="Part4.KeyMechanisms\Chapter25_InteractionWithWinRTComponents\images\" />
     <Folder Include="Part5.Multithreading\Chapter26_ExecutionThreads\images\" />
+    <Folder Include="Part5.Multithreading\Chapter27_AsynchronousCalculationOperations\images\" />
   </ItemGroup>
 
 </Project>
