--- a/csharp-learning/csharp-learning.csproj
+++ b/csharp-learning/csharp-learning.csproj
@@ -33,6 +33,7 @@
     <Folder Include="Part5.Multithreading\Chapter26_ExecutionThreads\images\" />
     <Folder Include="Part5.Multithreading\Chapter27_AsynchronousCalculationOperations\images\" />
     <Folder Include="Part5.Multithreading\Chapter28_IOAsynhronousOperations\images\" />
+    <Folder Include="Part5.Multithreading\Chapter29_PrimitiveDesignsOfThreadSynchronization\images\" />
   </ItemGroup>
 
 </Project>
