--- a/Concurrency/Concurrency/Concurrency.csproj
+++ b/Concurrency/Concurrency/Concurrency.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Chapter10.Cancellation\images\" />
     <Folder Include="Chapter3.AsyncThreads\images\" />
     <Folder Include="Chapter4.ParallelBasics\images\" />
     <Folder Include="Chapter5.DataFlowBasics\images\" />
@@ -19,6 +20,7 @@
 
   <ItemGroup>
     <PackageReference Include="System.Reactive" Version="6.0.0" />
+    <PackageReference Include="System.Threading.Channels" Version="7.0.0" />
     <PackageReference Include="xunit" Version="2.9.0" />
   </ItemGroup>
 
