end 10 chapter, start 11 chapter

--- a/Concurrency/Concurrency/Concurrency.csproj
+++ b/Concurrency/Concurrency/Concurrency.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <Folder Include="Chapter10.Cancellation\images\" />
+    <Folder Include="Chapter11.OOPGoodMatchingWithFunctional\images\" />
     <Folder Include="Chapter3.AsyncThreads\images\" />
     <Folder Include="Chapter4.ParallelBasics\images\" />
     <Folder Include="Chapter5.DataFlowBasics\images\" />
